@@ -128,7 +128,7 @@
           </execution>
         </executions>
         <configuration>
-          <extraJvmArgs>-Xmx1024M -Xss1024k</extraJvmArgs>
+          <extraJvmArgs>-Xmx1024M -Xss1024k -XX:MaxPermSize=1024M</extraJvmArgs>
           <runTarget>org.obiba.opal.web.gwt.app.GwtApp/index.html</runTarget>
           <hostedWebapp>war</hostedWebapp>
           <extraParam>true</extraParam>
